--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -4,39 +4,42 @@ body {
 
 .para,
 .small-para {
-  color: hsl(0, 0%, 0%);
-  font-weight: 800;
+  color: hwb(0 0% 100%);
+  font-weight: bolder;
 }
+.para {
+  font-size: 30px;
 
+}
 .small-para {
   font-size: 14px;
-  font-weight: 800;
+font-size: 20px;
 }
 
-.para {
-  font-size: 22px;
-}
 
-.confirm {
-  background: green;
-  color: white;
-  font-weight: bold;
-} 
+
+
 
 .button {
   background-color: rgb(255, 255, 255);
   color: rgb(0, 0, 0);
   font-size: 20px;
 }
+.confirm {
+  background: green;
+  color: white;
+  font-weight: bold;
+} 
 
-.child {
-  color: rgb(0, 0, 0);
-  font-weight: 800;
-  font-size: 14px;
-}
 
 div.text {
   color: rgb(0, 0, 0);
   font-size: 22px;
   font-weight: 100;
 }
+
+div.child {
+  color: rgb(0, 0, 0);
+  font-weight: 800;
+  font-size: 14px;
+} 
