--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -9,11 +9,14 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+
+
 }
 
 a {
@@ -23,3 +26,25 @@ a {
   /* this removes the line under the links */
   text-decoration: none;
 }
+
+
+/*this is the solution section  */
+
+.header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px;
+
+}
+
+
+
+
+.left-links ul, .right-links ul{
+  display: flex;
+  gap: 8px;
+  padding: 0px;
+}
+
+
