--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -46,3 +46,24 @@ a {
 ul {
   list-style-type: none;
 }
+
+
+
+/* solution code */
+.header{
+  display: flex;
+  justify-content: space-between;
+  padding: 8px;
+}
+.links{
+ display: flex;
+ gap :16px;
+ padding: 0;
+ margin: 0;
+
+}
+.left-side, .right-side{
+  display: flex;
+  gap: 16px;
+  align-items: center;
+}
