--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -25,3 +25,46 @@ input {
   width: 400px;
   margin-bottom: 16px;
 }
+
+
+
+/* edited by mohammad Amin qurbani */
+
+.header , .footer{
+  display: flex;
+  justify-content: space-between;
+}
+ .header ul , .footer ul{
+  display: flex;
+  padding: 0px;
+  margin: 0;
+list-style-type: none;
+padding: 10px ;
+gap: 10px;
+ 
+ }
+
+a {
+  text-decoration: none;
+  color:rgb(69, 65, 65) ;
+}
+body{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 8px;
+
+}
+
+.footer{
+  background-color: #eeeeee;
+}
+button{
+  padding: 8px;
+}
