--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -27,3 +27,68 @@ body {
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
 }
+
+
+/* edited by mohammad amin qurbani */
+
+.header{
+  font-size: 32px;
+  font-weight: 900;
+  display: flex;
+  align-items: center;
+  padding-left: 16px;
+}
+
+body{
+  display: flex;
+  flex-direction: column;
+
+
+}
+.content{
+  flex: 1;
+  display: flex;
+
+  margin: 0;
+
+
+ 
+}
+
+.footer{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+ 
+
+}
+.sidebar ul{
+  list-style-type: none;
+  padding: 0;
+  margin: 0 ;
+
+ 
+}
+.sidebar ul li a{
+  text-decoration: none;
+  font-size: 24px;
+  color: white;
+}
+.sidebar{
+  min-width: 300px;
+  padding: 16px;
+ 
+
+}
+
+
+.main-content{
+  display: flex;
+  flex-wrap: wrap;
+}
+.card{
+  width: 300px;
+  margin: 16px;
+
+  padding: 8px;
+}
